5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4467/executions/1590_1014.log
== TEST (2019-03-31 22:55:41) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
0.3
0.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:56:17) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
print(lucro)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(lucro)
NameError: name 'lucro' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:56:35) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
print(renda)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    print(renda)
NameError: name 'renda' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:56:44) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
0.3
0.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:56:49) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.191081
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
0.3
0.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-31 22:59:49) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- OUTPUT:
0.3
0.3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 22:59:52) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.164305
-- TEST CASE 1:
---- input:
700.50
---- correct output:
210.15
---- user output:
0.3
0.3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-31 23:00:22) 
-- CODE:
# Teste seu codigo aos poucos.
print(30/100)
print(round(0.3, 2))
priny(renda)
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.

-- EXECUTION TIME:
0.137899
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1014/main.py", line 4, in <module>
    priny(renda)
NameError: name 'priny' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
